# depth-finger

./: .gitignore  README.md  get_pretrained_models.sh  pyproject.toml  run.py
depthfinger/: __init__.py  depthfinger.py
depthfinger/camera/: __init__.py  usbcamera.py  webcamera.py
depthfinger/modules/protobuf/: cam_msg_pb2.py
depthfinger/modules/zmq/: __init__.py  camera.py
